DTS-50630 forecast productivity overall value for next data point