@@ -118,7 +118,7 @@ public class IterationBurnupServiceImplTest {
 										sprintDetails
 												.getBasicProjectConfigId()
 												.equals(new ObjectId("63d9280d5ce3ee7d77551313")))
-						.collect(Collectors.toList());
+						.toList();
 		JiraIssueHistoryDataFactory jiraIssueHistoryDataFactory =
 				JiraIssueHistoryDataFactory.newInstance(
 						"/json/default/iteration/jira_issue_custom_history_new_structure.json");
@@ -213,7 +213,7 @@ public class IterationBurnupServiceImplTest {
 		when(configHelperService.getFieldMappingMap()).thenReturn(fieldMappingMap);
 		when(jiraService.getJiraIssuesCustomHistoryForCurrentSprint())
 				.thenReturn(jiraIssuesCustomHistory);
-		doNothing().when(forecastingManager).addForecastsToDataCount(any(), any(), any());
+		doNothing().when(forecastingManager).addForecastsToDataCount(any(), any(), any(), any());
 		try {
 			KpiElement kpiElement =
 					iterationBurnupService.getKpiData(
